Se agregan el repository de lexemes y accentpairs en messageprocessor